Fix squashed controls bug

--- a/wp-content/themes/yfennimap/scss/_map.scss
+++ b/wp-content/themes/yfennimap/scss/_map.scss
@@ -142,5 +142,9 @@ a.tool{
   background-image:image-url('check.svg');
 }
 
+.gmnoprint img {
+    max-width: none; 
+}
+
 
 
